--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -14,6 +14,15 @@
     list-style-type: none;
 }
 
+.footer .top-container ul li .link-header {
+    display: inline-block;
+    color: #F4F5F7;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;    
+    margin-bottom: 20px;
+}
+
 .footer .top-container ul li a {
     display: inline-block;
     text-decoration: none;
@@ -29,13 +38,12 @@
     color: #AAA;
 }
 
-.footer .top-container ul li .link-header {
-    display: inline-block;
-    color: #F4F5F7;
-    font-size: 18px;
-    line-height: 28px;
-    font-weight: 500;    
-    margin-bottom: 20px;
+.footer .top-container ul li a img {
+    transition: all 0.25S ease;
+}
+
+.footer .top-container ul li a img:hover {
+    transform: translateY(-5px);
 }
 
 .footer .bottom-container {
@@ -72,4 +80,3 @@
     color: #000;
     background-color: white;
 }
-
