--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,15 +1,13 @@
 .home {
     background-color: hsl(178, 100%, 9%);
     color: #FFFFFF;
-    padding: 0 70px;
 }
 
 .home .nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 70px;
 }
 
 .home .nav img {
@@ -29,10 +27,6 @@
     text-decoration: none;
 }
 
-.home .nav ul a:hover {
-    color: #FBDDBB;
-}
-
 .home .nav ul a.unique {
     color: #00302E;
     font-size: 17px; 
@@ -47,7 +41,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 50px 0 140px 0;
+    padding: 70px 70px 140px 70px;
 }
 
 .home .section1 h2 {
@@ -56,7 +50,6 @@
     font-weight: 500;
     color: white;
     max-width: 650px;
-    margin-bottom: 0;;
 } 
 
 .home .section1 h2 span {
@@ -69,6 +62,15 @@
     line-height: 33px;
     color: rgba(255, 255, 255, 0.74);
     max-width: 600px;
+}
+
+.home .section1 .download {
+    transition: all 0.2s ease;
+}
+
+
+.home .section1 .download:hover {
+    transform: translateY(5px);
 }
 
 .home .section1 .image-container {
@@ -107,14 +109,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 120px 50px 120px;
+    padding: 100px 70px 50px 70px;
 }
 
 .home .section4 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 50px 100px 150px 100px;
+    padding: 80px 70px 150px 70px;
 }
 
 .home .section4 h3 {
@@ -160,5 +162,3 @@
     font-size: 18px;
     font-weight: 500;
 }
-
-
