--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,11 +1,14 @@
 .footer {
     background-color: #0B0D17;
+    font-family: 'Inter', serif;
 }
 
-.footer .top-container{
+.footer .top-container {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 40px;
     padding: 50px 250px 50px 100px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
@@ -19,7 +22,7 @@
     color: #F4F5F7;
     font-size: 18px;
     line-height: 28px;
-    font-weight: 500;    
+    font-weight: 500;
     margin-bottom: 20px;
 }
 
@@ -29,8 +32,8 @@
     color: #EEEFF4;
     font-size: 14px;
     line-height: 24px;
-    font-weight: 400;   
-    margin-bottom: 5px; 
+    font-weight: 400;
+    margin-bottom: 5px;
     transition: all 0.25s ease;
 }
 
@@ -48,6 +51,7 @@
 
 .footer .bottom-container {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     padding: 10px 200px 10px 100px;
@@ -58,6 +62,7 @@
     font-weight: 400;
     line-height: 24px;
     color: #D9DBE1;
+    white-space: nowrap;
 }
 
 .footer .bottom-container .icon-group {
@@ -79,4 +84,34 @@
 .footer .bottom-container .icons:hover {
     color: #000;
     background-color: white;
+}
+
+
+/* Responsiveness */
+@media screen and (min-width: 510px) and (max-width: 900px) {
+    .footer .top-container {
+        padding: 50px 50px 50px 50px;
+        /* flex-direction: column; */
+    }
+
+    .footer .bottom-container {
+        justify-content: space-between;
+        /* align-items: flex-start; */
+        /* flex-direction: column; */
+        padding: 10px 50px 10px 60px;
+    }
+}
+
+@media screen and (max-width: 510px) {
+    .footer .top-container {
+        padding: 50px 50px 50px 20px;
+        flex-direction: column;
+    }
+
+    .footer .bottom-container {
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-direction: column;
+        padding: 10px 50px 50px 60px;
+    }
 }
