--- a/src/Components/Food/food.css
+++ b/src/Components/Food/food.css
@@ -28,3 +28,45 @@
     line-height: 33px;
     max-width: 250px;
 }
+
+
+/* Responsiveness */
+@media screen and (min-width: 500px) and (max-width: 768px) {
+    .food .image-container {
+        width: 240px;
+        height: 240px;
+        margin: 0 auto;
+    }
+
+    .food h3 {
+        font-size: 27px;
+        line-height: 33px;
+        margin-bottom: 0;
+    }
+
+    .food p {
+        font-size: 16px;
+        line-height: 25px;
+        max-width: 250px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .food .image-container {
+        width: 220px;
+        height: 220px;
+        margin: 0 auto;
+    }
+
+    .food h3 {
+        font-size: 26px;
+        line-height: 33px;
+        margin-bottom: 0;
+    }
+
+    .food p {
+        font-size: 14px;
+        line-height: 25px;
+        max-width: 250px;
+    }
+}
