--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -42,6 +42,8 @@
 
 .home .section1 {
     display: flex;
+    row-gap: 20px;
+    column-gap: 20px;
     justify-content: space-between;
     align-items: center;
     padding: 70px 70px 140px 70px;
@@ -64,7 +66,7 @@
     font-weight: 400;
     line-height: 33px;
     color: rgba(255, 255, 255, 0.74);
-    max-width: 600px;
+    max-width: 75%;
 }
 
 .home .section1 .download {
@@ -76,8 +78,9 @@
 }
 
 .home .section1 .image-container {
-    width: 400px;
-    height: 400px;
+    min-width: 320px;
+    width: 450px;
+    height: auto;
     border-radius: 50%;
     overflow: hidden;
 }
@@ -89,11 +92,12 @@
 
 .home .section2 {
     text-align: center;
+    padding: 0 40px;
 }
 
 .home .section2 h3 {
     font-size: 36px;
-    line-height: 33px;
+    line-height: 38px;
     font-weight: 700;
     color: rgba(255, 255, 255, 0.87);
 }
@@ -109,6 +113,9 @@
 
 .home .section3 {
     display: flex;
+    flex-wrap: wrap;
+    column-gap: 50px;
+    row-gap: 50px;
     align-items: center;
     justify-content: space-between;
     padding: 100px 70px 50px 70px;
@@ -118,6 +125,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    row-gap: 20px;
     justify-content: space-between;
     padding: 80px 70px 150px 70px;
 }
@@ -126,7 +134,7 @@
     font-size: 36px;
     font-weight: 700;
     color: #fbddbb;
-    line-height: 33px;
+    line-height: 38px;
 }
 
 .home .section4 p {
@@ -147,6 +155,7 @@
     padding: 0 20px;
     margin: 0;
     margin-right: 10px;
+    margin-bottom: 15px;
 }
 
 .home .section4 form ::placeholder {
@@ -165,12 +174,148 @@
     color: #00302e;
     font-size: 18px;
     font-weight: 500;
+    cursor: pointer;
+    transition: all 0.25s ease;
 }
 
+.home .section4 button:hover {
+    border: 3px solid #b3b3b3;
+}
+
+.home .section4 button:active {
+    transform: scale(0.96);
+}
+
+
 /* Responsiveness */
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .home .section1 {
+        padding: 60px 70px 140px 60px;
+        flex-direction: column;
+    }
+
+    .home .section1 h2 {
+        font-size: 55px;
+        max-width: 100%;
+    }
+
+    .home .section1 p {
+        max-width: 100%;
+    }
+
+    .home .section1 .image-container {
+        order: -1;
+        align-self: center;
+        margin: 0 auto;
+        min-width: unset;
+        width: 320px;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 768px) {
+    .home .section1 {
+        padding: 60px 70px 140px 60px;
+        flex-direction: column;
+    }
+
+    .home .section1 h2 {
+        font-size: 35px;
+        line-height: 50px;
+        max-width: 100%;
+    }
+
+    .home .section1 p {
+        font-size: 16px;
+        line-height: 25px;
+        max-width: 100%;
+    }
+
+    .home .section1 .image-container {
+        order: -1;
+        align-self: center;
+        margin: 0 auto;
+        min-width: unset;
+        width: 320px;
+    }
+
+    .home .section2 h3 {
+        font-size: 32px;
+        line-height: 33px;
+    }
+
+    .home .section2 p {
+        font-size: 16px;
+        line-height: 25px;
+        max-width: 100%;
+    }
+
+    .home .section3 {
+        align-items: center;
+        justify-content: center;
+        padding: 100px 60px 50px 60px;
+    }
+
     .home .section4 {
-        display: flex;
+        padding: 80px 60px 150px 60px;
+    }
+
+    .home .section4 h3 {
+        font-size: 32px;
+        line-height: 33px;
+    }
+
+    .home .section4 p {
+        font-size: 16px;
+        line-height: 25px;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    .home .section1 {
+        padding: 50px 70px 140px 50px;
+        flex-direction: column;
+    }
+
+    .home .section1 h2 {
+        font-size: 28px;
+        line-height: 40px;
+        max-width: 100%;
+    }
+
+    .home .section1 p {
+        font-size: 14px;
+        line-height: 25px;
+        max-width: 100%;
+    }
+
+    .home .section1 .image-container {
+        order: -1;
+        align-self: center;
+        margin: 0 auto;
+        min-width: unset;
+        width: 300px;
+    }
+
+    .home .section2 h3 {
+        font-size: 26px;
+        line-height: 33px;
+    }
+
+    .home .section2 p {
+        font-size: 14px;
+        line-height: 25px;
+        max-width: 100%;
+    }
+
+    .home .section3 {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 100px 50px 50px 50px;
+    }
+
+    .home .section4 {
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
@@ -186,6 +331,18 @@
         font-size: 14px;
         line-height: 25px;
         max-width: 100%;
+    }
+
+    .home .section4 input {
+        width: 90%;
+        max-width: 90%;
+        height: 45px;
+        margin-right: 0px;
+    }
+
+    .home .section4 button {
+        width: 160px;
+        height: 45px;
     }
 
 }
