--- a/src/Pages/Login/login.css
+++ b/src/Pages/Login/login.css
@@ -1,13 +1,15 @@
 .login {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     justify-content: center;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .login img {
     width: 100%;
+    min-height: 100vh;
 }
 
 .login .form-container {
@@ -33,6 +35,7 @@
     border-radius: 5px;
     padding: 20px;
     height: 71px;
+    font-family: inherit;
 }
 
 .login input:focus {
@@ -44,6 +47,7 @@
     font-size: 14px;
     font-weight: 400;
     color: rgba(0, 48, 46, 0.53);
+    font-family: inherit;
 }
 
 .login button {
@@ -51,7 +55,7 @@
     background-color: #00302E;
     color: #FBDDBB;
     border-radius: 5px;
-    padding: 15px 200px;
+    padding: 15px 10px;
     height: 60px;
     margin-bottom: 10px;
     outline: none;
@@ -59,6 +63,7 @@
     font-size: 18px;
     cursor: pointer;
     transition: all 0.25s ease;
+    font-family: inherit;
 }
 
 .login button:hover {
@@ -68,7 +73,7 @@
 }
 
 .login button:active {
-    transform: scale(0.98);
+    transform: scale(0.95);
 }
 
 .login .bottom-container {
@@ -96,4 +101,37 @@
 .login .bottom-container p a:hover {
     font-weight: 500;
     text-decoration: underline;
+}
+
+
+/* Responsiveness */
+@media screen and (max-width: 768px) {
+    .login {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .login img {
+        width: 100%;
+        min-height: unset;
+        height: auto;
+        max-height: 70vh;
+        overflow: hidden;
+    }
+
+    .login .form-container {
+        padding: 30px 10%;
+    }
+
+    .login input {
+        height: 61px;
+    }
+
+    .login button {
+        height: 61px;
+    }
+
 }
