--- a/src/Pages/Signup/signup.css
+++ b/src/Pages/Signup/signup.css
@@ -1,13 +1,15 @@
 .signup {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
     justify-content: center;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 }
 
 .signup img {
     width: 100%;
+    min-height: 100vh;
 }
 
 .signup .form-container {
@@ -33,6 +35,7 @@
     border-radius: 5px;
     padding: 20px;
     height: 71px;
+    font-family: inherit;
 }
 
 .signup input:focus {
@@ -44,6 +47,7 @@
     font-size: 14px;
     font-weight: 400;
     color: rgba(0, 48, 46, 0.53);
+    font-family: inherit;
 }
 
 .signup button {
@@ -51,7 +55,7 @@
     background-color: #00302E;
     color: #FBDDBB;
     border-radius: 5px;
-    padding: 15px 200px;
+    padding: 15px 10px;
     height: 60px;
     margin-bottom: 10px;
     outline: none;
@@ -59,6 +63,7 @@
     font-size: 18px;
     cursor: pointer;
     transition: all 0.25s ease;
+    font-family: inherit;
 }
 
 .signup button:hover {
@@ -68,7 +73,7 @@
 }
 
 .signup button:active {
-    transform: scale(0.98);
+    transform: scale(0.95);
 }
 
 .signup .bottom-container {
@@ -107,4 +112,42 @@
     font-weight: 400;
     line-height: 33px;
     cursor: pointer;
+}
+
+
+/* Responsiveness */
+@media screen and (max-width: 768px) {
+    .signup {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .signup img {
+        width: 100%;
+        min-height: unset;
+        height: auto;
+        max-height: 70vh;
+        overflow: hidden;
+    }
+
+    .signup .form-container {
+        padding: 30px 10%;
+    }
+
+    .signup input {
+        height: 61px;
+    }
+
+    .signup button {
+        height: 61px;
+    }
+
+    .signup small {
+        top: 15px;
+        right: 20px;
+    }
+
 }
