--- a/src/Components/Order/order.css
+++ b/src/Components/Order/order.css
@@ -1,7 +1,7 @@
 .order {
     width: 100%;
     height: 100vh;
-    background: rgba(196, 196, 196, 0.42);
+    background: rgba(196, 196, 196, 0.3);
     position: absolute;
     z-index: 3;
 }
@@ -9,9 +9,9 @@
 .order .order-container {
     width: 50%;
     margin-left: auto;
-    height: 100vh;
+    min-height: 100vh;
     background-color: white;
-    padding: 30px;
+    padding: 50px 50px;
 }
 
 .order .column1 {
@@ -91,7 +91,7 @@
     font-weight: 500;
     font-size: 13px;
     line-height: 33px;
-    color: rgba(0, 0, 0, 0.69);   
+    color: rgba(0, 0, 0, 0.69);
 }
 
 .order h2 {
