--- a/src/Components/Sidebar/sidebar.css
+++ b/src/Components/Sidebar/sidebar.css
@@ -2,15 +2,23 @@
     background-color: #FBFBFB;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 250px;
     min-height: 100vh;
-    padding-top: 70px;
+    padding: 70px 20px;
     gap: 100px;
+    font-family: "Poppins", sans-serif;
+}
+
+.sidebar .image-container {
+    align-self: center;
+}
+
+.sidebar img {
+    width: 150px;
+    height: auto;
 }
 
 .sidebar .icon {
@@ -18,34 +26,44 @@
     color: #BCBCBC;
 }
 
-.sidebar .active .icon {
-    color: #000000;
-}
-
-.sidebar p {
-    display: inline-block;
-    color: #707070;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-}
-
-.sidebar .active p {
-    color: #000000;
-} 
-
-.sidebar .active {
-    background-color: #EFEFEF;
-    border-radius: 12px;
-}
-
-.sidebar .menu {
-    padding-left: 20px;
-}
-
-.sidebar .menu-container {
+.sidebar ul {
+    list-style-type: none;
     width: 100%;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
-    padding: 0 30px;
+    row-gap: 20px;
+}
+
+.sidebar li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+}
+
+.sidebar li a {
+    border-radius: 12px;
+    color: #707070;
+    font-size: 16px;
+    text-decoration: none;
+    width: 100%;
+    padding: 9px 10px 9px 15px;
+}
+
+.sidebar li a.active {
+    background-color: #EFEFEF;
+    border-radius: 12px;
+    color: #000000;
+    font-weight: 500;
+}
+
+.sidebar li a.active .icon {
+    color: #000000;
+}
+
+.sidebar li a:hover {
+    background-color: #EFEFEF;
 }
